<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <Button
            android:id="@+id/ClearBut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round"
            android:backgroundTint="@color/elem"
            android:text="@string/options_clear"
            android:textColor="@color/if_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/SaveBut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/round"
            android:backgroundTint="@color/elem"
            android:text="@string/options_save"
            android:textColor="@color/if_color"
            app:layout_constraintEnd_toEndOf="@+id/ClearBut"
            app:layout_constraintStart_toStartOf="@+id/ClearBut"
            app:layout_constraintTop_toBottomOf="@+id/ClearBut" />

        <Button
            android:id="@+id/LoadBut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round"
            android:backgroundTint="@color/elem"
            android:text="@string/options_load"
            android:textColor="@color/if_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/SaveBut"
            app:layout_constraintStart_toStartOf="@+id/SaveBut"
            app:layout_constraintTop_toBottomOf="@+id/SaveBut" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>