<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tabs"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:textColor="@color/elem"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/round"
        android:backgroundTint="@color/while_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tabs"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <EditText
            android:id="@+id/predLeft"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/collimator"
            android:hint="@string/name_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/font_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <EditText
            android:id="@+id/predRight"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/collimator"
            android:hint="@string/value_hint"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/font_size"
            app:layout_constraintBottom_toBottomOf="@+id/predLeft"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView18"
            app:layout_constraintTop_toTopOf="@+id/predLeft" />

        <EditText
            android:id="@+id/cond"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/collimator"
            android:hint="@string/cond_hint"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/font_size"
            app:layout_constraintEnd_toEndOf="@+id/predRight"
            app:layout_constraintStart_toStartOf="@+id/predLeft"
            app:layout_constraintTop_toBottomOf="@+id/predLeft" />

        <EditText
            android:id="@+id/postLeft"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/collimator"
            android:hint="@string/name_hint"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cond" />

        <EditText
            android:id="@+id/postRight"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/collimator"
            android:hint="@string/value_hint"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/font_size"
            app:layout_constraintBottom_toBottomOf="@+id/postLeft"
            app:layout_constraintEnd_toEndOf="@+id/predRight"
            app:layout_constraintTop_toTopOf="@+id/postLeft"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/collimator"
            android:text="@string/for_view"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/collimator"
            android:text="@string/equal_view"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size"
            app:layout_constraintBottom_toBottomOf="@+id/postLeft"
            app:layout_constraintEnd_toStartOf="@+id/postRight"
            app:layout_constraintStart_toEndOf="@+id/postLeft"
            app:layout_constraintTop_toTopOf="@+id/postLeft" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/collimator"
            android:text="@string/equal_view"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size"
            app:layout_constraintBottom_toBottomOf="@+id/predLeft"
            app:layout_constraintEnd_toStartOf="@+id/predRight"
            app:layout_constraintStart_toEndOf="@+id/predLeft"
            app:layout_constraintTop_toTopOf="@+id/predLeft" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>